--- a/android-engineer.html
+++ b/android-engineer.html
@@ -74,7 +74,7 @@
 <p><span class="badge badge-light">Beaverton, OR Beaverton, OR</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/eleostech/e09301bb-0e4e-4ccd-8d5f-e185f7ebd541'>Eleos Technologies - Android/iOS Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/eleostech/e09301bb-0e4e-4ccd-8d5f-e185f7ebd541'>Eleos Technologies - Android/iOS Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -111,7 +111,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Warsaw Warsaw  Barcelona Warsaw</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/glovo/jobs/4489111002'>Job Application for Android Engineer - Customer Experience at Glovo</a></h5> 
+<h5><a href='https://boards.greenhouse.io/glovo/jobs/4489111002'>Job Application for Android Engineer - Customer Experience at Glovo</a></h5> 
 <p><span class="badge badge-light">Barcelona Barcelona</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -133,7 +133,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Zurich, Switzerland</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ngyllMwL'>Benefitfocus Careers - Android Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=ngyllMwL'>Benefitfocus Careers - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light">Salt Lake City, Utah</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -189,7 +189,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Berlin, Germany</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o4robfwO'>Carri?res Trek Bicycle - Android Mobile Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/trek-bicycle-fr/job/o4robfwO'>Carri?res Trek Bicycle - Android Mobile Software Engineer</a></h5> 
 <p><span class="badge badge-light">Waterloo, Wisconsin</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -202,7 +202,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p>Oct 14, 2019 ... We are a leading digital bank on a mission to disrupt the banking industry. We've 
 built an app with smart money management tools to help our customers live a?...</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qUJ9Vfwr&k=Job&j=oRYnbfw7&__jvst=Employee&__jvsd=sxYTchwm&__jvsc=Twitter&bid=nwFrgMw9'>Nerdery Careers - Android Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qUJ9Vfwr&k=Job&j=oRYnbfw7&__jvst=Employee&__jvsd=sxYTchwm&__jvsc=Twitter&bid=nwFrgMw9'>Nerdery Careers - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -230,11 +230,11 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Minneapolis, Minnesota  Chicago, Illinois  Phoenix, Arizona</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/blinkhealth/jobs/4476184002'>Job Application for Senior Android Engineer at Blink Health</a></h5> 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://sanerjobs.com/job/android-engineer-stripe/114'>Android Engineer at Stripe - SanerJobs</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on:: 2019-10-20</p>
 <hr/>
@@ -242,7 +242,7 @@ built an app with smart money management tools to help our customers live a?...<
 <p><span class="badge badge-light">Budapest</span></p>
 <p>Posted on: 2019-10-20</p>
 <hr/>
-<h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://apply.workable.com/codelitt-incubator/j/A88CCE4117/'>Android/iOS Engineer - Codelitt Incubator</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>2 days ago ... Great communication and English skills; Great iOS or Android experience with 
 code to prove it; Javascript experience a plus; You know how to architect all?...</p>
@@ -298,11 +298,11 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nE9d9Mwq'>Benefitfocus Careers - Android Software Engineer</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nE9d9Mwq'>Benefitfocus Careers - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-14</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/spendesk/e67e26a0-74ac-461a-9365-1b745b37ee07'>Spendesk - Android Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/spendesk/e67e26a0-74ac-461a-9365-1b745b37ee07'>Spendesk - Android Engineer</a></h5> 
 <p><span class="badge badge-light">Paris  Paris Berlin</span></p>
 <p>Posted on: 2019-10-13</p>
 <hr/>
@@ -314,7 +314,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-13</p>
 <hr/>
-<h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.talkdesk.com/careers/td/lisbon/ambassadors/ambassadors-fct-1900036?gh_jid=1900036'>Android Software Engineer  [Porto] - Careers | Talkdesk</a></h5> 
 <p><span class="badge badge-light">Lisbon</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -326,7 +326,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">United States  NYC</span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fueled/jobs/1909614'>Job Application for Senior Android Engineer at Fueled</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-12</p>
 <hr/>
@@ -362,7 +362,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Berlin  Berlin</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BlaBlaCar/743999696938629-senior-android-engineer-blablalines'>BlaBlaCar Senior Android Engineer - BlaBlaLines | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-09</p>
 <hr/>
@@ -408,7 +408,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light">Portland, Oregon</span></p>
 <p>Posted on:: 2019-10-07</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/creditkarma/79bd1ea8-b7a6-4da8-b76e-669c5dde8121'>Credit Karma - Android Engineer (Charlotte,NC)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/creditkarma/79bd1ea8-b7a6-4da8-b76e-669c5dde8121'>Credit Karma - Android Engineer (Charlotte,NC)</a></h5> 
 <p><span class="badge badge-light">Charlotte, NC  Canada</span></p>
 <p>Posted on: 2019-10-07</p>
 <hr/>
@@ -460,7 +460,7 @@ work on innovative mobile projects that would impact tens of millions of people'
 <p><span class="badge badge-light">United States</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nV6r0MwJ'>Benefitfocus Careers - Android Software Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qZlaVfw9&k=Job&j=oUobbfwo&__jvst=Employee&__jvsd=s1A2Kgw8&__jvsc=Twitter&bid=nV6r0MwJ'>Benefitfocus Careers - Android Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-04</p>
 <hr/>
