--- a/frontend.html
+++ b/frontend.html
@@ -38,15 +38,19 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/heycar/jobs/4499234002'>Job Application for Frontend Engineer (m/f/d) at heycar</a></h5> 
+<p><span class="badge badge-light">Berlin  Berlin</span></p>
+<p>Posted on: 2019-10-31</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/grow99/jobs/4461465002'>Job Application for Senior Frontend Engineer at Grow Mobility</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
 <h5><a href='https://brandung.join.com/jobs/457437-frontend-developer-typo3-w-m-d'>Job @ brandung & Co. KG (Berlin): Frontend Develop... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596697-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CITECH/743999698596697-concepteur-developpeur-front-end-h-f-'>CITECH Concepteur / D?veloppeur Front End (H/F) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -92,7 +96,7 @@
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
+<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -104,7 +108,7 @@
 <p><span class="badge badge-light">New York</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
-<h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://mindcurv.applytojob.com/apply/L5PvuvCm75/Developer-Front-End'>Developer Front End - mindcurv - Career Page</a></h5> 
 <p><span class="badge badge-light">Kerala, India</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -170,7 +174,7 @@
 <p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/elementai/jobs/1919939'>Job Application for D?veloppeur(euse) front-end - AI Enablement | Front-End Developer - AI Enablement  at Element AI</a></h5> 
 <p><span class="badge badge-light">Montreal</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -178,11 +182,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tsitrone.join.com/jobs/467489-frontend-web-entwickler-in-koeln-m-w'>Job @ tsitrone medien + Co. KG (K?ln): Frontend We... | JOIN</a></h5> 
 <p><span class="badge badge-light">K?ln, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://4finance.recruiterbox.com/jobs/fk03ioy/'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -208,11 +212,11 @@
 <p><span class="badge badge-light">Austin, TX</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://opera.breezy.hr/p/8cfce7df5ae7-frontend-developer'>Frontend Developer at Opera</a></h5> 
+<h5><a href='https://opera.breezy.hr/p/8cfce7df5ae7-frontend-developer'>Frontend Developer at Opera</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
+<h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -276,7 +280,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/castlegroup/job/oXGrbfwZ'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
+<h5><a href='https://jobs.jobvite.com/castlegroup/job/oXGrbfwZ'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -314,11 +318,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oxBg8fwg&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=n1gHoMwD'>Guidewire Software, Inc. Careers - Software Engineer Front-End ? Dublin, Ireland</a></h5> 
 <p><span class="badge badge-light">Dublin Dublin Dublin Dublin</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://4finance.recruiterbox.com/jobs/fk03ioy'>
     Senior Frontend Developer at 4Finance IT
 </a></h5> 
 <p><span class="badge badge-light">Prague</span></p>
@@ -352,7 +356,7 @@
 <p><span class="badge badge-light">Amsterdam, Netherlands</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DataFactory/743999698489548-front-end-engineer-remote'>DataFactory Front End Engineer - Remote | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Washington, DCUnited States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -452,15 +456,11 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
+<h5><a href='https://dedeleads.com/job/stilman-advanced-strategies-looking-for-remote-front-end-developer-angular/'>STILMAN Advanced Strategies looking for Remote Front End Developer, Angular</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
 <h5><a href='https://dedeleads.com/job/livearea-looking-for-sr-front-end-developer-sfcc/'>LiveArea looking for Sr. Front End Developer (SFCC)</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-10-30</p>
-<hr/>
-<h5><a href='https://apply.workable.com/zencargo/j/A7D28AE544/'>Senior Frontend Engineer - Zencargo</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
